// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Message Default 1`] = `
<div
  style={
    {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "position": "relative",
    }
  }
>
  <div
    className="sc-1kelln5-0 exuiBe"
    data-testid="test"
    id="test"
  >
    <span
      data-testid="test-children"
    >
      Soy un mensaje de prueba
    </span>
  </div>
</div>
`;

exports[`Storyshots Atoms/Message Loading 1`] = `
<div
  style={
    {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "position": "relative",
    }
  }
>
  <div
    className="sc-1kelln5-0 guGDmx"
    data-testid="test"
    id="test"
    loading={true}
  >
    <span />
    <span />
    <span />
  </div>
</div>
`;

exports[`Storyshots Atoms/Message Outgoing 1`] = `
<div
  style={
    {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "position": "relative",
    }
  }
>
  <div
    className="sc-1kelln5-0 gsOApI"
    data-testid="test"
    id="test"
  >
    <span
      data-testid="test-children"
    >
      Soy un mensaje de prueba
    </span>
  </div>
</div>
`;

exports[`Storyshots Atoms/Message Variants 1`] = `
<div
  style={
    {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "position": "relative",
    }
  }
>
  <div
    className="sc-1kelln5-0 exuiBe"
    data-testid="test"
    id="test"
  >
    <span
      data-testid="test-children"
    >
      Soy un mensaje de prueba
    </span>
  </div>
  <div
    className="sc-1kelln5-0 gsOApI"
    data-testid="test"
    id="test"
  >
    <span
      data-testid="test-children"
    >
      Soy un mensaje de prueba
    </span>
  </div>
</div>
`;
